--- a/index.html
+++ b/index.html
@@ -410,16 +410,16 @@ canonical: https://heliumjk.github.io
             <div class="contact-info">
               <address>
 							<i class="fa fa-map-marker icons cyan-color contact-info-icon"></i>
-							Level 13, 2 Elizabeth St, Melbourne,
+							10-Vengateshwara Nagar, Perungudi
 							<br>
-							Victoria 3000, Australia
+							Chennai - 600096, India
 						</address>
               <div class="tel-info">
-                <a href="tel:1800452308"><i class="fa fa-mobile icons cyan-color contact-info-icon"></i>1800 452 308</a>
-                <a href="tel:+61(8)82343555"><i class="fa fa-phone icons cyan-color contact-info-icon"></i>+61 (8) 8234 3555</a>
+                <a href="tel:1800452308"><i class="fa fa-mobile icons cyan-color contact-info-icon"></i>+91 8870932544</a>
+                <!-- <a href="tel:+61(8)82343555"><i class="fa fa-phone icons cyan-color contact-info-icon"></i>+61 (8) 8234 3555</a> -->
               </div>
-              <a href="mailto:lantoniotrento@gmail.com"><i class="fa fa-envelope-o icons cyan-color contact-info-icon"></i>lantoniotrento@gmail.com</a>
-              <a href="https://antoniotrento.github.io"><i class="fa fa-tablet icons cyan-color contact-info-icon"></i>https://antoniotrento.github.io</a>
+              <a href="mailto:rameshshann@gmail.com"><i class="fa fa-envelope-o icons cyan-color contact-info-icon"></i>rameshshann@gmail.com</a>
+              <a href="https://rameshshann.github.io"><i class="fa fa-tablet icons cyan-color contact-info-icon"></i>https://rameshshann.github.io</a>
               {% include social-block.html %}
             </div>
           </div>
