--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@ canonical: https://heliumjk.github.io
                     <div class="image-overlay">
                       <div class="overlay-text text-center">
                         <div class="info-text">
-                          <strong>Melody Clark</strong>
-                          <span>UX Specialist</span>
+                          <strong>Rameshkumar</strong>
+                          <span>Full Stack Developer</span>
                         </div>
                         <hr class="small-divider border-white">
                         <ul class="social-icons">
@@ -295,7 +295,7 @@ canonical: https://heliumjk.github.io
                     <div class="image-overlay">
                       <div class="overlay-text text-center">
                         <div class="info-text">
-                          <strong>Danny Burton</strong>
+                          <strong>Prabhakaran</strong>
                           <span>Senior Designer</span>
                         </div>
                         <hr class="small-divider border-white">
@@ -310,49 +310,9 @@ canonical: https://heliumjk.github.io
                   <!-- Team Item Ends -->
                 </div>
 
-                <div class="col-sm-6 col-md-3">
-                  <!-- Team Item Starts -->
-                  <figure>
-                    <img src="{{ BASE_PATH }}/assets/images/team/team-07.jpg" alt="">
-                    <div class="image-overlay">
-                      <div class="overlay-text text-center">
-                        <div class="info-text">
-                          <strong>Elizabeth Jones</strong>
-                          <span>Art Director</span>
-                        </div>
-                        <hr class="small-divider border-white">
-                        <ul class="social-icons">
-                          <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                          <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                          <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                        </ul>
-                      </div>
-                    </div>
-                  </figure>
-                  <!-- Team Item Ends -->
-                </div>
+                
 
-                <div class="col-sm-6 col-md-3">
-                  <!-- Team Item Starts -->
-                  <figure>
-                    <img src="{{ BASE_PATH }}/assets/images/team/team-08.jpg" alt="">
-                    <div class="image-overlay">
-                      <div class="overlay-text text-center">
-                        <div class="info-text">
-                          <strong>Danny Burton</strong>
-                          <span>Senior Designer</span>
-                        </div>
-                        <hr class="small-divider border-white">
-                        <ul class="social-icons">
-                          <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                          <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                          <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                        </ul>
-                      </div>
-                    </div>
-                  </figure>
-                  <!-- Team Item Ends -->
-                </div>
+                
 
               </div>
             </div>            	      	      	      
