--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ tagline: Bootstrap 4 UI kit for Jekyll
 css: 
 js: sliders.js
 keywords: helium, jekyll, bootstrap, UI, kit
-canonical: https://heliumjk.github.io
+canonical: https://rameshshann.github.io/
 ---
 {% include JB/setup %}
 <!-- Content Area Start -->
